fix(header): hide vertical scrollbar

--- a/components/header/src/Header.module.scss
+++ b/components/header/src/Header.module.scss
@@ -42,7 +42,6 @@
 
   .Navigation {
     display: none;
-    margin-bottom: -1px;
 
     @media (min-width: $breakpoint-sm) {
       display: block;
